<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Обувная компания</string>
    <string name="photo">Фото</string>
    <string name="current_discount">Действующая скидка</string>
    <string name="product_list">Список товаров</string>
    <string name="description">Описание товара:</string>
    <string name="manufacturer">Производитель:</string>
    <string name="supplier">Поставщик:</string>
    <string name="price">Цена:</string>
    <string name="unit">Единица измерения:</string>
    <string name="stock">Количество на складе:</string>
    <string name="buy">Купить</string>
    <string name="search_hint">Поиск по названию товара</string>
    <string name="admin_panel">Админ‑панель</string>
    <string name="buy_dialog_message">Купить этот товар по цене %1$.2f руб.?</string>
    <string name="cannot_buy_title">Покупка невозможна</string>
    <string name="cannot_buy_message">Товара нет в наличии.</string>
    <string name="admin_hint">Выберите товар из списка ниже для редактирования или заполните форму и нажмите «Добавить товар».</string>
    <string name="field_category">Категория</string>
    <string name="field_name">Наименование</string>
    <string name="field_description">Описание</string>
    <string name="field_manufacturer">Производитель</string>
    <string name="field_supplier">Поставщик</string>
    <string name="field_price">Цена (руб.)</string>
    <string name="field_unit">Единица измерения</string>
    <string name="field_stock">Количество на складе</string>
    <string name="field_discount">Скидка (%)</string>
    <string name="save_changes">Сохранить изменения</string>
    <string name="add_new_product">Добавить товар</string>
    <string name="admin_existing_products">Существующие товары:</string>
    <string name="select_product_first">Сначала выберите товар из списка.</string>
    <string name="product_updated">Товар обновлён.</string>
    <string name="product_added">Товар добавлен.</string>
    <string name="fill_required_fields">Заполните обязательные поля: категория и наименование.</string>
    <string name="fill_numbers_correctly">Проверьте правильность числовых полей (цена, количество, скидка).</string>
    <string name="login_title">Вход в приложение</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="btn_login">Войти</string>
    <string name="btn_guest">Войти как гость</string>
    <string name="fill_login_password">Введите логин и пароль</string>
    <string name="invalid_credentials">Неверный логин или пароль</string>
    <string name="product_id">ID</string>
    <string name="logout">Выйти</string>
    <string name="role_management">Управление ролями</string>
    <string name="role_management_hint">Только администратор может менять роли. Поменять роли местами (admin ↔ manager).</string>
    <string name="swap_roles">Поменять роли местами</string>
    <string name="role_swapped">Роли обновлены. Изменения применятся при следующем входе.</string>
    <string name="role_admin">Администратор</string>
    <string name="role_manager">Менеджер</string>
</resources>
